# portfolio.kdanni.org

./: .env.example  .gitignore  .persona  DECISIONS.md  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  CURRENT_STATE.md  TECHNICAL_REQUIREMENTS.md  TESTING.md
src/node/: package-lock.json  package.json
src/python/: README.md  pyproject.toml
src/python/alembic/: env.py
src/python/alembic/versions/: 1826303a9c0b_add_exchange_and_relation_to_asset.py  7f4b26bc090f_create_assets_table.py  9223aea760a1_refactor_asset_to_listing_model.py  e90ea3ad86de_add_asset_class_enum_and_isin.py
src/python/api/: dependencies.py  main.py
src/python/api/routers/: admin.py  assets.py  exchanges.py  listings.py
src/python/api/schemas/: assets.py  exchanges.py  listings.py
src/python/core/domain/: asset.py  enums.py  exchange.py  listing.py
src/python/core/interfaces/: market_data.py
src/python/core/repositories/: asset_repository.py  exchange_repository.py  listing_repository.py
src/python/core/services/: asset_sync_service.py
src/python/infrastructure/database/: base.py  models.py  session.py
src/python/infrastructure/repositories/: asset_repository.py  exchange_repository.py  listing_repository.py
src/python/infrastructure/services/: market_data_service.py
src/python/scripts/: seed_market_data.py
src/python/tests/python/: test_sync_service.py
tests/python/: conftest.py  test_asset_repository.py
tests/python/api/: test_assets.py
